--- a/page2css.css
+++ b/page2css.css
@@ -46,3 +46,8 @@ body.paper-bg::before{
   box-shadow: 0 8px 24px rgba(0,0,0,0.18);
   background: #fff3;
 }
+
+img.coin{
+  height: 50px;
+  width: 50px;
+}
