only images to be added

--- a/page2css.css
+++ b/page2css.css
@@ -203,3 +203,12 @@ div.break {
   margin-top: 10px;
 }
 
+.text{
+  font-size: large;
+  font-weight: 90;
+  color: blueviolet;
+  text-align: left;
+
+}
+
+
